<resources>
    <string name="app_name">eKeel</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="enter">Enter</string>
    <string name="remember">Remember me</string>
    <string name="langRUS">RUS</string>
    <string name="langENG">ENG</string>
    <string name="trainings">Тренировки</string>
    <string name="dictionary">Словарь</string>
    <string name="wordSets">Наборы слов</string>
    <string name="addWord">Добавить в словарь</string>
    <string name="myDictionary">Мой словарь</string>
    <string name="findWords">Поиск перевода</string>
    <string name="trainingMyDictionary">Тренировка словаря</string>
    <string name="enterWord">Введите слово</string>
    <string name="translate">Перевод</string>
    <string name="randomWord">Случайное слово</string>
    <string name="generate">Получить</string>
    <string name="theme_number">Номер темы в книге</string>
    <string name="onlyEst">Только эст</string>
    <string name="onlyRus">Только рус</string>
    <string name="check">Проверить</string>
    
    <string-array name="randomWordLang">
        <item>Все</item>
        <item>Только рус</item>
        <item>Только эст</item>
    </string-array>
</resources>